<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Azul_claro"
    tools:context="EmpleadosLista">


  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      tools:ignore="ExtraText">


    <Button
        style="@style/Boton_Personalizado"
        android:layout_width="412dp"
        android:layout_height="50dp"
        android:text="@string/boton_añadir"
        android:textColor="#212121" />

    <Button
        style="@style/Boton_Personalizado"
        android:layout_width="408dp"
        android:layout_height="50dp"
        android:text="@string/boton_eliminar"
        android:textColor="#212121" />

    <Button
        style="@style/Boton_Personalizado"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:text="@string/boton_editar"
        android:textColor="#212121" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

